--- a/app/views/factory/admin/production_plans/update.turbo_stream.erb
+++ b/app/views/factory/admin/production_plans/update.turbo_stream.erb
@@ -4,7 +4,7 @@
 <% elsif referer_controller == controller_path && referer_meta[:action] == 'edit' %>
   <%= turbo_stream.append 'body', partial: 'visit', locals: { url: url_for(action: 'show') } %>
 <% elsif referer_controller == 'factory/admin/produce_plans' %>
-  <%= turbo_stream.update "tr_#{@production_plan.production_id}", partial: "#{referer_path}/index_tbody", locals: { model: @production_plan } %>
+  <%= turbo_stream.update "tr_#{@production_plan.id}", partial: "#{referer_path}/index_tbody", locals: { model: @production_plan } %>
 <% else %>
   <%= turbo_stream.append 'body', partial: 'visit' %>
 <% end %>
