--- a/app/views/factory/admin/produce_plans/_products/_product_thead.html.erb
+++ b/app/views/factory/admin/produce_plans/_products/_product_thead.html.erb
@@ -1,3 +1,3 @@
-<th><%= Factory::Product.human_attribute_name(:name) %></th>
+<th><%= Factory::Production.human_attribute_name(:product_id) %></th>
 <th><%= Factory::Production.human_attribute_name(:name) %></th>
 <th><%= Factory::Production.human_attribute_name(:price) %></th>
