--- a/app/views/factory/admin/produce_plans/_products/_product_table.html.erb
+++ b/app/views/factory/admin/produce_plans/_products/_product_table.html.erb
@@ -1,11 +1,11 @@
-<table class="table is-striped is-boxed is-fullwidth">
+<table class="table is-boxed is-fullwidth">
   <thead>
     <tr>
       <%= render 'product_thead' %>
       <th style="min-width: 18em"></th>
     </tr>
   </thead>
-  <tbody id="tbody">
+  <tbody id="product_tbody">
     <%= yield %>
   </tbody>
 </table>
