--- a/app/views/factory/admin/produce_plans/_products/_breadcrumb.html.erb
+++ b/app/views/factory/admin/produce_plans/_products/_breadcrumb.html.erb
@@ -1,2 +1,3 @@
+<li><%= link_to t('.produce_on.index.title'), { controller: 'produce_on' } %></li>
 <li><span class="px-3"><%= @produce_plan.produce_on %></span></li>
 <li class="is-active"><%= t('.title') %></li>
