--- a/app/views/factory/admin/taxons/_show_table.html.erb
+++ b/app/views/factory/admin/taxons/_show_table.html.erb
@@ -8,9 +8,13 @@
 </div>
 <div>
   <dt><%= Factory::Taxon.human_attribute_name(:logo) %></dt>
-  <dt><%= image_tag @taxon.logo, class: 'image is-64x64' if @taxon.logo.attached? %></dd>
+  <dd><%= image_tag @taxon.logo, class: 'image is-64x64' if @taxon.logo.attached? %></dd>
 </div>
 <div>
   <dt><%= Factory::Taxon.human_attribute_name(:logo_color) %></dt>
-  <dt><%= image_tag @taxon.logo_color, class: 'image is-64x64' if @taxon.logo_color.attached? %></dd>
+  <dd><%= image_tag @taxon.logo_color, class: 'image is-64x64' if @taxon.logo_color.attached? %></dd>
+</div>
+<div>
+  <dt><%= Factory::Taxon.human_attribute_name(:products_count) %></dt>
+  <dd><%= @taxon.products_count %></dd>
 </div>
