--- a/app/views/factory/admin/taxons/edit.html.erb
+++ b/app/views/factory/admin/taxons/edit.html.erb
@@ -1,5 +1,3 @@
 <%= render partial: 'taxon_bar' %>
 
-<div class="box">
-  <%= render partial: 'edit_form', locals: { model: @taxon } %>
-</div>
+<%= render partial: 'edit_no_frame', locals: { model: @taxon } %>
