--- a/app/views/factory/admin/productions/_part/_component_tr.html.erb
+++ b/app/views/factory/admin/productions/_part/_component_tr.html.erb
@@ -1,4 +1,4 @@
-<tr id="tr_<%= model.id %>" data-controller="show" data-action="mouseenter->show#show mouseleave->show#hide">
+<tr data-controller="show" data-action="mouseenter->show#show mouseleave->show#hide">
   <%= yield %>
 </tr>
 
