--- a/app/views/factory/admin/productions/_part/_form.html.erb
+++ b/app/views/factory/admin/productions/_part/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with theme: 'modal', model: @production, url: { action: 'update' } do |f| %>
+<%= form_with theme: 'inline', model: @production, url: { action: 'update' }, class: 'modal-card' do |f| %>
   <header class="modal-card-head">
     <p class="modal-card-title"><%= t('.title') %></p>
     <button type="button" data-action="modal#close" class="delete"></button>
@@ -9,5 +9,7 @@
       <%= render partial: 'component_tbody', layout: 'component_tr', collection: @product.components, as: :component, locals: { f: f } %>
     <% end %>
   </section>
-  <%= f.submit %>
+  <footer class="modal-card-foot">
+    <%= f.submit %>
+  </footer>
 <% end %>
