--- a/app/views/factory/admin/productions/_part/_component_tr.html.erb
+++ b/app/views/factory/admin/productions/_part/_component_tr.html.erb
@@ -1,9 +1,5 @@
-<%= f.fields :production_parts, model: @production.production_parts.build do |ef| %>
-
 <tr data-controller="show" data-action="mouseenter->show#show mouseleave->show#hide">
   <%= yield %>
 </tr>
 
-<%= render partial: 'part_tbody', layout: 'part_tr', collection: component.parts, as: :part, locals: { f: ef } %>
-
-<% end %>
+<%= render partial: 'part_tbody', layout: 'part_tr', collection: component.parts, as: :part, locals: { f: f } %>
