--- a/app/views/factory/admin/productions/_part/_part_tbody.html.erb
+++ b/app/views/factory/admin/productions/_part/_part_tbody.html.erb
@@ -1,9 +1,10 @@
-<%= f.fields :production_parts, model: @production.production_parts.find(&->(i){ i.part_id == part.id }) || @production.production_parts.build do |ef| %>
+<%= f.fields :production_parts, model: @production.production_parts.find_or_initialize_by(part_id: part.id) do |ef| %>
   <td><%= ef.check_box '_destroy', { checked: ef.object.persisted?, include_hidden: true, data: { action: 'show#toggle' } }, '0', '1' %></td>
+  <td><%= ef.object.part.name %></td>
   <td>
   <% if ef.object.persisted? %>
     <div data-show-target="check">
-      <%= ef.hidden_field :part_id, value: part.id %>
+      <%= ef.hidden_field :part_id %>
       <%= ef.number_field :number, style: 'width: 5em' %>
     </div>
     <span data-show-target="hidden" class="display-none"><%= ef.object.number %></span>
