--- a/app/views/factory/admin/produce_plans/_products/_index_table.html.erb
+++ b/app/views/factory/admin/produce_plans/_products/_index_table.html.erb
@@ -1,6 +1,6 @@
 <table class="table is-boxed is-fullwidth">
   <thead>
-    <tr>
+    <tr class="is-info">
       <%= render 'index_thead' %>
       <th style="min-width: 18em"></th>
     </tr>
