--- a/app/views/factory/admin/products/index.html.erb
+++ b/app/views/factory/admin/products/index.html.erb
@@ -2,7 +2,10 @@
 <%= render 'index_actions' %>
 
 <%= render layout: 'index_table' do %>
-  <%= render partial: 'index_tbody', layout: 'index_tr', collection: @products, as: :model %>
+  <% @products.group_by(&:taxon).each do |taxon, products| %>
+    <%= render partial: 'taxon_tbody', locals: { taxon: taxon, size: products.size + 1 } %>
+    <%= render partial: 'index_tbody', layout: 'index_tr', collection: products, as: :model %>
+  <% end %>
 <% end %>
 
 <%= paginate @products %>
