--- a/app/views/factory/admin/productions/cost.turbo_stream.erb
+++ b/app/views/factory/admin/productions/cost.turbo_stream.erb
@@ -1,1 +1,1 @@
-<%= turbo_stream.append 'body', partial: 'form', layout: 'modal' %>
+<%= turbo_stream.append 'body', partial: 'form', layout: 'modal_form' %>
