--- a/app/views/factory/admin/provideds/_new_form.html.erb
+++ b/app/views/factory/admin/provideds/_new_form.html.erb
@@ -1,12 +1,7 @@
-<%= form_with model: @part_provider, url: { action: 'create' }, class: 'modal-card' do |f| %>
-  <header class="modal-card-head">
-    <p class="modal-card-title"><%= t('.title') %></p>
-    <button type="button" data-action="modal#close" class="delete"></button>
-  </header>
+<%= form_with theme: 'modal', model: @part_provider, url: { action: 'create' } do |f| %>
+  <%= render 'modal_header' %>
   <section class="modal-card-body">
     <%= render partial: 'form', locals: { f: f } %>
   </section>
-  <footer class="modal-card-foot is-block">
-    <%= f.submit %>
-  </footer>
+  <%= f.submit %>
 <% end %>
