fix select dialog

--- a/app/views/factory/admin/component_parts/_show_table.html.erb
+++ b/app/views/factory/admin/component_parts/_show_table.html.erb
@@ -1,5 +1,5 @@
 <div>
-  <dt><%= Factory::ProductPart.human_attribute_name(:part_taxon_id) %></dt>
+  <dt><%= Factory::ComponentPart.human_attribute_name(:part_taxon_id) %></dt>
   <dd><%= @product_part.part_taxon_id %></dd>
 </div>
 <div>
