--- a/app/views/application/_scene.html.erb
+++ b/app/views/application/_scene.html.erb
@@ -2,7 +2,7 @@
   <div class="column_box py-3">
     <p class="size-7">
       <span>预定截止：</span>
-      <span class="<%= scene.bookable?(produce_on) ? 'color-success' : 'color-danger' %>">
+      <span class="<%= scene.bookable?(produce_on) ? 'text-success' : 'text-danger' %>">
         <span><%= extra_distance_date(produce_on) %></span>
         <time><%= scene.book_finish_at.to_fs(:time) %></time>
       </span>
