--- a/app/views/factory/scenes/show.html.erb
+++ b/app/views/factory/scenes/show.html.erb
@@ -10,7 +10,7 @@
       <div class="media-content">
         <p class="size-7 text-centered">
           <span>预定时间：</span>
-          <span class="<%= @scene.bookable?(@produce_on) ? 'color-success' : 'color-danger' %>">
+          <span class="<%= @scene.bookable?(@produce_on) ? 'text-success' : 'text-danger' %>">
           <time><%= @scene.book_start_at.to_fs(:time) %></time>
           <span>~</span>
           <time><%= @scene.book_finish_at.to_fs(:time) %></time>
