--- a/app/views/application/_production.html+phone.erb
+++ b/app/views/application/_production.html+phone.erb
@@ -1,13 +1,13 @@
 <div id="production_<%= model.id %>" data-controller="common" class="media is-box">
-  <%= link_to({ controller: '/factory/productions', action: 'show', id: model.id }, text: true, state: 'enter', data: { controller: 'empty' }, class: 'media-left as-logo') do %>
+  <%= link_to({ controller: '/factory/productions', action: 'show', id: model.id }, text: true, data: { controller: 'empty' }, class: 'media-left as-logo') do %>
     <%= image_tag model.product.logo, class: 'image is-64x64' if model.product.logo.attached? %>
   <% end %>
   <div class="media-content as-body">
-    <%= link_to({ controller: '/factory/productions', action: 'show', id: model.id }, text: true, state: 'enter', class: 'text-grey-dark') do %>
+    <%= link_to({ controller: '/factory/productions', action: 'show', id: model.id }, text: true, class: 'text-grey-dark') do %>
       <% if model.product.brand %><span class="tag is-light is-danger"><%= model.product.brand&.name %></span><% end %>
       <span><%= model.title %></span>
     <% end %>
-    <%= link_to({ controller: '/factory/productions', action: 'show', id: model.id }, text: true, state: 'enter', class: 'text-grey size-0_9 display-block mt-1') do %>
+    <%= link_to({ controller: '/factory/productions', action: 'show', id: model.id }, text: true, class: 'text-grey size-0_9 display-block mt-1') do %>
       <%= model.product.description %>
     <% end %>
     <ul class="media-info mt-1">
