--- a/app/views/factory/admin/base/_taxon_bar.html+phone.erb
+++ b/app/views/factory/admin/base/_taxon_bar.html+phone.erb
@@ -4,7 +4,7 @@
       <i class="fa-solid fa-fw fa-store text-primary"></i>
       <span><%= t('factory.admin.title') %></span>
     </div>
-    <%= link_to({ controller: '/factory/productions' }, state: 'enter') do %>
+    <%= link_to({ controller: '/factory/productions' }) do %>
       <i class="fa-solid fa-up-right-and-down-left-from-center"></i>
       <span>预览商店</span>
     <% end %>
