--- a/app/views/factory/admin/production_plans/_index/_top_bar.html+phone.erb
+++ b/app/views/factory/admin/production_plans/_index/_top_bar.html+phone.erb
@@ -1,5 +1,5 @@
 <div data-controller="mini-program" data-mini-program-pt-class="pt-0" class="box as-bar">
-  <%= link_to({ controller: 'productions', product_id: @production.product_id }, state: 'return', class: 'px-4') do %>
+  <%= link_to({ controller: 'productions', product_id: @production.product_id }, class: 'px-4') do %>
     <i class="fa-solid fa-lg fa-fw-1 fa-angle-left"></i>
   <% end %>
   <div class="weui-title"><%= @production.name %></div>
