--- a/app/views/factory/produce_plans/_overview/_scene.html.erb
+++ b/app/views/factory/produce_plans/_overview/_scene.html.erb
@@ -6,7 +6,7 @@
         <span><%= scene.title %></span>
       </div>
       <div class="level-right mt-0">
-        <%= link_to({ controller: 'scenes', action: 'show', id: scene.id }, state: 'enter') do %>
+        <%= link_to({ controller: 'scenes', action: 'show', id: scene.id }) do %>
           <span>更多</span>
           <i class="fa-solid fa-angle-right"></i>
         <% end %>
