--- a/app/views/factory/productions/_show/_top_bar.html+phone.erb
+++ b/app/views/factory/productions/_show/_top_bar.html+phone.erb
@@ -1,5 +1,5 @@
 <div data-controller="mini-program" class="box as-bar">
-  <%= link_to({ action: 'index', taxon_id: @production.taxon_id }, state: 'return', class: 'px-4') do %>
+  <%= link_to({ action: 'index', taxon_id: @production.taxon_id }, class: 'px-4') do %>
     <i class="fa-solid fa-lg fa-fw-1 fa-angle-left"></i>
   <% end %>
   <div class="weui-title"><%= @production.title %></div>
