--- a/app/views/factory/productions/show.html.erb
+++ b/app/views/factory/productions/show.html.erb
@@ -12,7 +12,7 @@
       <% if @cart %>
         <%= render partial: 'cart', locals: { item: @cart.init_cart_item(params, good_id: @production.id), item_con: 'trade/my/items', cart: @cart } %>
       <% end %>
-      <%= link_to({ controller: 'trade/my/carts', action: 'show', id: @cart.id }, state: 'enter', class: 'button is-small is-primary is-radius') do %>
+      <%= link_to({ controller: 'trade/my/carts', action: 'show', id: @cart.id }, class: 'button is-small is-primary is-radius') do %>
         <span class="pr-1"><%= t('trade.my.carts.show.title') %></span>
         <i class="fa-solid fa-angle-right"></i>
       <% end if @cart %>
