--- a/app/views/factory/productions/_base/_component.html.erb
+++ b/app/views/factory/productions/_base/_component.html.erb
@@ -14,7 +14,7 @@
         <i class="fa-solid fa-xmark ml-1"></i>
       <% end %>
       <%= hidden_field_tag 'production_parts_attributes[][part_id]', component_part.part_id, form: 'edit_custom', data: { part_taxon_id: component_part.part.taxon_id }, id: nil if @production.part_ids.include?(component_part.part_id) && component.disabled?(@production.part_ids, component_part.part_id) %>
-      <%= check_box_tag 'production_parts_attributes[][part_id]', component_part.part_id, @production.part_ids.include?(component_part.part_id), disabled: component.disabled?(@production.part_ids, component_part.part_id), data: { action: 'custom#toggle', part_taxon_id: component.part_taxon_id }, class: 'weui-check', id: "part_#{component_part.part_id}", form: 'edit_custom' %>
+      <%= check_box_tag 'production_parts_attributes[][part_id]', component_part.part_id, @production.part_ids.include?(component_part.part_id), disabled: component.disabled?(@production.part_ids, component_part.part_id), data: { action: 'custom#toggle', part_taxon_id: component.part_taxon_id }, class: 'weui-check display-none', id: "part_#{component_part.part_id}", form: 'edit_custom' %>
     </label>
   <% end %>
   </div>
