--- a/app/views/factory/admin/productions/_part/_component_tr.html.erb
+++ b/app/views/factory/admin/productions/_part/_component_tr.html.erb
@@ -2,4 +2,4 @@
   <%= yield %>
 </tr>
 
-<%= render partial: 'part_tbody', layout: 'part_tr', collection: component.parts, as: :part, locals: { f: f } %>
+<%= render partial: 'part_tbody', layout: 'part_tr', collection: component.parts, as: :part, locals: { f: f, component: component } %>
