--- a/app/views/factory/agent/productions/_index/_card.html+phone.erb
+++ b/app/views/factory/agent/productions/_index/_card.html+phone.erb
@@ -1,4 +1,4 @@
-<div class="media box">
+<div class="media is-boxed">
   <div class="media-left">
     <figure class="image is-64x64 is-1by1">
       <%= image_tag model.logo if model.logo.attached? %>
